fix:Text Alignment Issue Resolved

--- a/docs/assets/css/default.css
+++ b/docs/assets/css/default.css
@@ -1270,6 +1270,7 @@ img.communityday-sponsor-small {
 
 .info-list {
     list-style: none;
+    display: -webkit-inline-flex;
 }
 
 .info-list li {
@@ -1527,6 +1528,11 @@ img.communityday-sponsor-small {
 }
 
 @media only screen and (min-width: 360px) and (max-width: 480px) {
+
+    .info-list {
+        list-style: none;
+        display: block !important;
+    }
     .ts-intro {
         padding-bottom: 1rem !important;
         padding-top: 5rem;
